Bug 520581 - HTML5 parser reverses attributes on some elements. r=bzbarsky.